--- a/index.html
+++ b/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Asesorias Prada</title>
 </head>
 <body>
 
+    <!-- Header -->
     <header>
-        <nav class="nav-principal">
-            <ul class="nav-items">
-                <li><a href="#" class="hover-link">Inicio</a></li>
-                <li><a href="#" class="hover-link">La Firma</a></li>
-                <li><a href="#" class="hover-link">Asesorias Prada</a></li>
-                <li><a href="#" class="hover-link">Servicios</a></li>
-                <li><a href="#" class="hover-link">Contacto</a></li>
+        <!-- Presentación -->
+        <div class="header-container container">
+            <ul class="d-flex justify-content-between align-items-center">
+                <li>
+                    <a href="/"><img src="img/logo.png" class="site-logo" alt="Logo"></a></li>
+                <li>
+                    <i class="header-icon fas fa-phone"></i>
+                     <span class="info-title">Telefóno</span>
+                    <p class="info">+584248242823</p>
+                </li>
+                <li>
+                    <i class="header-icon fas fa-envelope"></i>
+                    <span class="info-title">Email</span>
+                    <p class="info">asesoriasprada@gmail.com</p>
+                </li>
+                <li>
+                    <i class="header-icon fas fa-clock"></i>
+                    <span class="info-title">Horario</span>
+                    <div class="info">Lun - Vie : 08:00-05:00</div>
+                </li>
+                <li>
+                    <a href="#" class="btn btn-primary text-uppercase">Consulta Gratis</a>
+                </li>
             </ul>
-       
-        </nav>
-    </header>
+        </div>
+        <!-- Presentación -->
 
-    
+        <!-- Navegación Principal -->
+        <nav class="header-container nav-principal">
+            <div class="container">
+                <ul class="d-flex justify-content-between">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Navegación Principal -->
+    </header>
+    <!-- Header -->
+
+
+    <!-- Fontawesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha512-fzff82+8pzHnwA1mQ0dzz9/E0B+ZRizq08yZfya66INZBz86qKTCt9MLU0NCNIgaMJCgeyhujhasnFUsYMsi0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 </html>
