--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <nav class="header-container nav-principal">
             <div class="container">
                 <ul class="d-flex justify-content-between">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#" class="hover-link">Inicio</a></li>
+                    <li><a href="#" class="hover-link">Servicios</a></li>
+                    <li><a href="#" class="hover-link">Contacto</a></li>
+                    <li><a href="#" class="hover-link">Blog</a></li>
                 </ul>
             </div>
         </nav>
