--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Estilos -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Asesorias Prada</title>
@@ -45,6 +46,7 @@
         </div>
         <!-- Presentación -->
 
+
         <!-- Navegación Principal -->
         <nav class="header-container nav-principal">
             <div class="container">
@@ -61,8 +63,26 @@
     <!-- Header -->
 
 
+    <!-- Hero -->
+    <div class="hero-image d-flex justify-content-center align-items-center">
+        <!-- Hero Content -->
+        <div class="hero-text text-align-center">
+            <span></span>
+            <h1>Asesorias Prada</h1>
+            <p>Lorem ipsum dol. </p>
+            <p>Lorem ipsum dolor sir orem ipsum dolor si orem ipsum</p>
+
+            <!-- Hero Btn -->
+            <div class="btn-hero">
+                <a href="#" class="btn btn-primary-fixed text-uppercase">Contacto</a>
+            </div>
+        </div>
+        <!-- Hero Content -->
+    </div>
+    <!-- Hero -->
+
+
     <!-- Fontawesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha512-fzff82+8pzHnwA1mQ0dzz9/E0B+ZRizq08yZfya66INZBz86qKTCt9MLU0NCNIgaMJCgeyhujhasnFUsYMsi0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
 </body>
 </html>
